[gd_scene load_steps=4 format=3 uid="uid://cq2tmiy2nv4oo"]

[ext_resource type="Script" path="res://Player/spark_radius.gd" id="1_ssak3"]

[sub_resource type="SphereShape3D" id="SphereShape3D_51kwn"]
radius = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6k5qe"]
transparency = 1
albedo_color = Color(1, 1, 1, 0.121569)

[node name="SparkRadius" type="Area3D"]
transform = Transform3D(1.15, 0, 0, 0, 1.15, 0, 0, 0, 1.15, 0, 0, 0)
script = ExtResource("1_ssak3")
secondsBetweenSwaps = 0.5

[node name="SparkCollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_51kwn")

[node name="SparkCSGSphere3D" type="CSGSphere3D" parent="."]
radius = 1.0
material = SubResource("StandardMaterial3D_6k5qe")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
